# time-series-with-auto-llm

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  research_improvements.ipynb  seoul_air_quality_data.csv
backend/: __init__.py  data_service.py  llm_service.py  model_service.py  visualization_service.py
config/: __init__.py  settings.py
data/: seoul_air_quality_data.csv
deploy/time-series-app/: Chart.yaml  values.yaml
deploy/time-series-app/templates/: deployment.yaml  service.yaml
frontend/: __init__.py  components.py  session_state.py  sidebar.py
models/: __init__.py  arima_model.py  base_model.py  exp_smoothing_model.py  lstm_model.py  model_factory.py  prophet_model.py  transformer_model.py
prompts/: hyperparameter_recommendation_prompt.py  model_parameter_tuning_prompt.py  time_series_analysis_prompt.py
streamlit_pages/: change_point_analysis.py  decomposition.py  differencing.py  hyperparameter_optimization.py  introduction.py  llm_analysis.py  modeling.py  multivariate_analysis.py  stationarity.py  time-series-graph.py
utils/: __init__.py  data_processor.py  data_reader.py  llm_connector.py  parameter_utils.py  singleton.py  visualizer.py
